tests/baselines/reference/YieldExpression11_es6.errors.txt
error TS2318: Cannot find global type 'IterableIterator'.
tests/cases/conformance/es6/yieldExpressions/YieldExpression11_es6.ts(3,11): error TS2663: Cannot find name 'foo'. Did you mean the instance member 'this.foo'?


!!! error TS2318: Cannot find global type 'IterableIterator'.
==== tests/cases/conformance/es6/yieldExpressions/YieldExpression11_es6.ts (1 errors) ====
    class C {
      *foo() {
        yield(foo);
              ~~~
!!! error TS2663: Cannot find name 'foo'. Did you mean the instance member 'this.foo'?
      }
    }